gnome-bg: load the default background if the configured one is invalid

https://bugzilla.gnome.org/show_bug.cgi?id=680100